Created page with "This article describes the setup of an Ethernet network device.  == Installation ==  === Hardware detection === To choose the right driver, first detect the used Ethernet control..."

--- a/Ethernet.mw
+++ b/Ethernet.mw
@@ -3,124 +3,28 @@ This article describes the setup of an Ethernet network device.
 == Installation ==
 
 === Hardware detection ===
-
-To choose the right driver, first detect the used Ethernet controllers. Use {{c|[[Hardware detection|lspci]]}} for this task:
-
+To choose the right driver, first detect the used Ethernet controllers. You can use [[Hardware detection#lspci|lspci]] for this task:
 {{RootCmd|lspci {{!}} grep --color Ethernet}}
 
 === Kernel ===
-
-The next step is to activate the kernel options appropriate to the Ethernet hardware in the machine. Open up a second terminal window in order to reference the output generated in the step above. The option to enable Ethernet drivers can be found in the following location: 
-
-{{KernelBox|1=
+You need to activate the following kernel options:
+{{Kernel||
 Device Drivers  --->
     Networking support  --->
-        [*] Network device support --->
-            [*]   Ethernet driver support  --->
+        [*] Network device support
+
+            Ethernet (1000 Mbit)  --->
+                ''Select the driver for your Gigabit Ethernet network device:''
+{{User:Astaecker/Kernel table|level=4
+  |{{User:Astaecker/Kernel table row|Broadcom Tigon3 support|tg3|}}
+}}
+{{Clear}}
 }}
 
-Scan the drivers carefully. Compare the results of the {{c|lspci}} command above with the available drivers in the list. Enable the feature(s) that match the installed Ethernet device(s).
-
-{{Note|For more information on configuring the kernel see the [[Kernel/Configuration| kernel configuration]] article.}} 
-
 == Configuration ==
+* [[Network Connection]]
 
-=== Physical interface settings ===
-
-List '''eth0''' physical interface settings using {{package|sys-apps/ethtool}}:
-
-{{RootCmd|ethtool eth0|output=<pre>
-Settings for eth0:
-        Supported ports: [ TP ]
-        Supported link modes:   10baseT/Half 10baseT/Full
-                                100baseT/Half 100baseT/Full
-                                1000baseT/Full
-        Supported pause frame use: No
-        Supports auto-negotiation: Yes
-        Advertised link modes:  10baseT/Half 10baseT/Full
-                                100baseT/Half 100baseT/Full
-                                1000baseT/Full
-        Advertised pause frame use: No
-        Advertised auto-negotiation: Yes
-        Speed: 1000Mb/s
-        Duplex: Full
-        Port: Twisted Pair
-        PHYAD: 0
-        Transceiver: internal
-        Auto-negotiation: on
-        MDI-X: off (auto)
-        Supports Wake-on: umbg
-        Wake-on: g
-        Current message level: 0x00000007 (7)
-                               drv probe link
-        Link detected: yes
-</pre>}}
-
-* Or using {{c|mii-tool}} from {{package|sys-apps/net-tools}} package:
-
-{{RootCmd|mii-tool eth0 -v|output=<pre>
-eth0: negotiated 1000baseT-FD flow-control, link ok
-  product info: vendor 23:58:00, model 42 rev 0
-  basic mode:   autonegotiation enabled
-  basic status: autonegotiation complete, link ok
-  capabilities: 1000baseT-FD 100baseTx-FD 100baseTx-HD 10baseT-FD 10baseT-HD
-  advertising:  1000baseT-FD 100baseTx-FD 100baseTx-HD 10baseT-FD 10baseT-HD flow-control
-  link partner: 1000baseT-HD 1000baseT-FD 100baseTx-FD 100baseTx-HD 10baseT-FD 10baseT-HD
-</pre>}}
-
-{{Note|The output of {{c|mii-tool}} sometimes does not work for certain network drivers.}}
-
-=== Physical interface features (TCP offloading) ===
-
-Sometimes NIC's have basic/partial TCP/IP stack implementation, and support offloading of certain networking routines/protocols to the NIC chip.
-
-Example below shows network interface offloading features supported on device '''eth0''':
-
-{{RootCmd|ethtool --show-offload eth0|output=<pre>
-Features for eth0:
-rx-checksumming: off
-tx-checksumming: on
-        tx-checksum-ipv4: off [fixed]
-        tx-checksum-ip-generic: on
-        tx-checksum-ipv6: off [fixed]
-        tx-checksum-fcoe-crc: off [fixed]
-        tx-checksum-sctp: off [fixed]
-scatter-gather: on
-        tx-scatter-gather: on
-        tx-scatter-gather-fraglist: off [fixed]
-tcp-segmentation-offload: on
-        tx-tcp-segmentation: on
-        tx-tcp-ecn-segmentation: off [fixed]
-        tx-tcp6-segmentation: off [fixed]
-udp-fragmentation-offload: off [fixed]
-generic-segmentation-offload: on
-generic-receive-offload: on
-large-receive-offload: off [fixed]
-rx-vlan-offload: on
-tx-vlan-offload: on [fixed]
-ntuple-filters: off [fixed]
-receive-hashing: off [fixed]
-highdma: off [fixed]
-rx-vlan-filter: on [fixed]
-vlan-challenged: off [fixed]
-tx-lockless: off [fixed]
-netns-local: off [fixed]
-tx-gso-robust: off [fixed]
-tx-fcoe-segmentation: off [fixed]
-fcoe-mtu: off [fixed]
-tx-nocache-copy: on
-loopback: off [fixed]
-rx-fcs: off
-rx-all: off
-</pre>}}
-
-== See also ==
-
-* {{See also|Network management}}
-* {{See also|Power management/Ethernet|Power management}}
-
-== External resources ==
-
-* [https://en.wikipedia.org/wiki/TCP_offload_engine TCP offload engine]
+== Advanced Configuration ==
+* [[Power Management/Ethernet|Power Management]]
 
 [[Category:Network devices]]
