Created page with "This article describes the setup of a Wifi network device.  == Installation ==  === Hardware detection === To choose the right driver, first detect the used Wifi controllers. You..."

--- a/Wifi.mw
+++ b/Wifi.mw
@@ -1,270 +1,106 @@
-<languages />
-<translate>
+This article describes the setup of a Wifi network device.
 
-{{DISPLAYTITLE:WiFi}}
+== Installation ==
 
-<!--T:1-->
-{{InfoBox stack
-|{{InfoBox homepage|https://wireless.wiki.kernel.org/|header=true}}
-|{{InfoBox wikipedia|Wi-Fi}}
-}}
+=== Hardware detection ===
+To choose the right driver, first detect the used Wifi controllers. You can use [[Hardware detection#lspci|lspci]] for this task:
+{{RootCmd|lspci {{!}} grep --color -i network}}
 
-<!--T:2-->
-This article [[Article description::describes the setup of a [[Wikipedia:Wi-Fi|WiFi]] (wireless) network device.]]
-
-== WiFi during installation  == <!--T:3-->
-
-<!--T:4-->
-If a WiFi connection is needed while installing Gentoo, note that the Gentoo minimal install CD has a limited number of drivers available, and provides only {{c|wpa_cli}} (and not {{c|wpa_gui}}) for configuring for WPA/WPA2/Enterprise connections.
-
-<!--T:5-->
-If the minimal install CD does not contain the required drivers or the graphical frontend to {{c|[[wpa_supplicant]]}} is preferred, choose a different live CD such as the [http://sysresccd.org System Rescue CD]. Be aware that some [[Installation_alternatives#Installation_from_non-Gentoo_LiveCDs|special steps]] may be required when using a non-Gentoo live CD.
-
-== Hardware detection == <!--T:6-->
-
-<!--T:7-->
-First detect the WiFi controllers. {{c|[[Hardware detection|lspci]]}} or {{c|[[Hardware detection|lsusb]]}} are command-line tools that can be used for this task. 
-
-<!--T:8-->
-If a Linux (LiveCD/USB) is booted that makes a WiFi connection:
-
-<!--T:9-->
-{{RootCmd|lspci -k}}
-
-<!--T:10-->
-The driver will be identified on one of the lines starting with <code>Kernel driver in use:</code>.
-
-<!--T:11-->
-If the booted system does not make a WiFi connection, then obtain a full list of hardware identifiers from the current system. This list can be used to identify the proper driver later:
-
-<!--T:12-->
-{{RootCmd|lspci -n}}
-
-<!--T:13-->
-Copy the list of PCIID's that the command produces and paste it at https://kmuto.jp/debian/hcl/.
-
-<!--T:14-->
-For USB devices, a similar approach can be taken. First obtain the list of detected USB devices on the system:
-
-<!--T:15-->
-{{Cmd|lsusb}}
-
-<!--T:16-->
-This command produces the PCI ID, manufacturer, make, model, and/or chipset of every USB device attached to the system. Of these, the chipset may be the most useful information. Searching the web for ''linuxwireless.org <chipset>'' is often the shortest way to find a USB NIC driver and firmware name.
-
-<!--T:17-->
-Alternatively, {{c|lshw}} can be used to obtain the necessary information:
-
-<!--T:18-->
-{{RootCmd|lshw {{!}} grep -i driver {{!}} perl -pe 's/^.*driver{{=}}(\S+).*$/$1/g;' {{!}} sort -u}}
-
-<!--T:19-->
-This command produces a list of all drivers, regardless of the device being PCI or USB based.
-
-== Kernel == <!--T:20-->
-
-<!--T:21-->
-With the drivers identified, it is time to configure the Linux kernel.
-
-=== IEEE 802.11 === <!--T:22-->
-
-<!--T:23-->
-{{:Wifi/IEEE 802.11/en}}
-
-=== WEXT === <!--T:24-->
-
-<!--T:25-->
-The "cfg80211 [https://wireless.wiki.kernel.org/en/developers/documentation/wireless-extensions wireless extensions] compatibility" option aka WEXT will support old {{c|[[Handbook:Parts/Networking/Wireless#Wireless_tools|wireless-tools]]}} and {{c|[https://wireless.wiki.kernel.org/en/users/documentation/iw/replace-iwconfig iwconfig]}}.
-
-<!--T:26-->
-{{KernelBox|1=
+=== Kernel ===
+You need to activate the following kernel options:
+{{Kernel||
 [*] Networking support  --->
-    [*] Wireless  --->
-        [*]     cfg80211 wireless extensions compatibility
-}}
+    [*]   Wireless  --->
+          [*]   Improved wireless configuration API
+          [*]   Generic IEEE 802.11 Networking Stack (mac80211)
 
-=== Device drivers === <!--T:27-->
+          ''Optionally enable a Wifi LED:''
+          [*]   Enable LED triggers
 
-<!--T:28-->
-Next the right set of corresponding kernel options need to be enabled, based on the drivers and hardware detected previously. The [https://forums.gentoo.org/viewtopic-p-7640140.html#7640140 recommendation] is to build [[Kernel_Modules#Compile-in-kernel_modules_vs_Loadable_kernel_modules_.28LKMs.29|drivers as modules]]. Also be sure to enable AES cipher support in the kernel if the wireless network uses WPA or WPA2 encryption.
-
-<!--T:29-->
-{{KernelBox|1=
-    Device Drivers  --->
-    [*] Network device support  --->
-        [*] Wireless LAN  --->
- 
-            Select the driver for your Wifi network device, e.g.:
-            <M> Broadcom 43xx wireless support (mac80211 stack) (b43)
-            [M]    Support for 802.11n (N-PHY) devices
-            [M]    Support for low-power (LP-PHY) devices
-            [M]    Support for HT-PHY (high throughput) devices
-            <M> Intel Wireless WiFi Next Gen AGN - Wireless-N/Advanced-N/Ultimate-N (iwlwifi)
-            <M>    Intel Wireless WiFi DVM Firmware support                             
-            <M>    Intel Wireless WiFi MVM Firmware support
-            <M> Intel Wireless WiFi 4965AGN (iwl4965)
-            <M> Intel PRO/Wireless 3945ABG/BG Network Connection (iwl3945)
-            <M> Ralink driver support  --->
-                <M>   Ralink rt27xx/rt28xx/rt30xx (USB) support (rt2800usb)
- 
--*- Cryptographic API --->
-    -*- AES cipher algorithms
-    -*- AES cipher algorithms (x86_64)
-    <*> AES cipher algorithms (AES-NI)
-}}
-
-<!--T:30-->
-{{Important|In case the driver is built into the kernel (<code><*></code>) instead of as a module (<code><M></code>), then the firmware needs to be built [[Kernel_Modules#Compile-in-kernel_modules_vs_Loadable_kernel_modules_.28LKMs.29|into the kernel]] as well.
-<br />Do not forget to [[Kernel/Rebuild|rebuild the kernel]] after changing its configuration.}}
-
-=== LED support === <!--T:31-->
-
-<!--T:32-->
-To enable LED triggers for different packet receive/transmit events, compile the kernel with the following options:
-
-<!--T:33-->
-{{KernelBox|1=
 Device Drivers  --->
-    [*] LED Support  --->
-        <*>   LED Class Support
- 
-[*] Networking support  --->
-    [*] Wireless  --->
-        [*] Enable LED triggers
+    [*] Network device support  --->
+        Wireless LAN  --->
+            [*] Wireless LAN (IEEE 802.11)
+
+            ''Select the driver for your Wifi network device:''
+{{User:Astaecker/Kernel table|level=3
+  |{{User:Astaecker/Kernel table row|Broadcom 43xx wireless support (mac80211 stack)|b43|}}
+  |{{User:Astaecker/Kernel table row|Support for 802.11n (N-PHY) devices|sub|}}
+  |{{User:Astaecker/Kernel table row|Support for low-power (LP-PHY) devices|sub|}}
+  |{{User:Astaecker/Kernel table row|Support for HT-PHY (high throughput) devices|sub|}}
+  |{{User:Astaecker/Kernel table row|Intel Wireless WiFi Next Gen AGN - Wireless-N/Advanced-N/Ultimate-N (iwlwifi)|iwlwifi|}}
+  |{{User:Astaecker/Kernel table row|Intel Wireless WiFi 4965AGN (iwl4965)|iwl4965|}}
+  |{{User:Astaecker/Kernel table row|Intel PRO/Wireless 3945ABG/BG Network Connection (iwl3945)|iwl3945|}}
+}}
+{{Clear}}
 }}
 
-== Firmware == <!--T:34-->
-
-<!--T:35-->
-In addition to the kernel driver, some chipsets also require firmware. If required, locate it on the following list and install it:
-
-<!--T:36-->
-{{Emerge|sys-kernel/linux-firmware}}
-
-<!--T:37-->
-<div class="mw-collapsible">
-{| class="table table-condensed table-striped"
-|-
-! WiFi device
-! Driver
+=== Firmware ===
+Neben dem Kerneltreiber wird auch eine Firmware benötigt:
+{| border="2" align="center" style="border:solid 1px #AAAAAA; border-collapse:collapse;text-align:center;position:center;"
+|- style="background-color: grey"
+! Wifi device
 ! Firmware
 ! Note
 |-
-| Atheros AR9271 & AR7010 
-| ath9k_htc
-| {{Package|sys-kernel/linux-firmware}}
-|
+| Broadcom Wifi devices
+| {{Package|net-wireless/b43-firmware}}
+| mask, see {{Bug|410297}}
 |-
-| Broadcom 43xx wireless support
-| b43 / b43legacy
-| {{Package|sys-firmware/b43-firmware}}
-| Aircrack-ng ready, most probably the best choice [http://wireless.kernel.org/en/users/Drivers/b43#Supported_devices if your bcm43xx device is supported]
-|-
-| Broadcom PCIe and SDIO/USB devices
-| [https://wireless.wiki.kernel.org/en/users/drivers/brcm80211?s%5b%5d=brcmsmac brcmsmac] / [https://wireless.wiki.kernel.org/en/users/drivers/brcm80211?s%5b%5d=brcmfmac brcmfmac]
-| {{Package|sys-kernel/linux-firmware}}
-| Lacks powersaving, LED support and [http://wireless.kernel.org/en/users/Drivers/brcm80211#To_be_done_for_softmac_driver other features]
-|-
-| Broadcom 43xx wireless support
-| wl
-| {{Package|net-wireless/broadcom-sta}}
-| Proprietary, no AP or Monitor modes, [http://wireless.kernel.org/en/users/Drivers/b43#Comparison_of_recent_drivers Comparison of bcm43xx drivers]
-|-
-| Intel PRO/Wireless 2200BG
-| ipw2200
-| {{Package|sys-firmware/ipw2200-firmware}}
-|
-|-
-| [[Intel Corporation PRO/Wireless 3945ABG|Intel PRO/Wireless 3945ABG/BG]]
-| [[Intel_Corporation_PRO/Wireless_3945ABG#Device_driver_iwl3945|iwlegacy]]
-| {{Package|sys-kernel/linux-firmware}}
+| Intel PRO/Wireless 3945ABG/BG
+| {{Package|net-wireless/iwl3945-ucode}}
 |
 |-
 | Intel Wireless WiFi 4965AGN
-| iwl4965
-| {{Package|sys-kernel/linux-firmware}}
+| {{Package|net-wireless/iwl4965-ucode}}
 |
 |-
-| All other Intel Wireless devices
-| [[iwlwifi]]
-| {{Package|sys-kernel/linux-firmware}}
-| See the [[iwlwifi]] article for detailed instructions.
-|-
-| [[Qualcomm Atheros QCA6174]]
-| ath10k_pci
-| ath10k-firmware
-| See [[Qualcomm_Atheros_QCA6174#Firmware]]
-|-
-| Ralink/MediaTek USB devices
-| e.g. [https://wireless.wiki.kernel.org/en/users/drivers/rt2800usb?s%5b%5d=rt2800usb rt2800usb]
-| {{Package|sys-kernel/linux-firmware}}
+| Intel Wireless WiFi 5100AGN, 5300AGN, 5350AGN
+| {{Package|net-wireless/iwl5000-ucode}}
 |
 |-
-| Realtek RTL8191SE & RTL8192SE
-| rtl8192se
-| {{Package|sys-kernel/linux-firmware}}
+| Intel Wireless WiFi 5150AGN
+| {{Package|net-wireless/iwl5150-ucode}}
 |
 |-
-| Realtek 8723AU/8723BU/8191EU/8192EU/8188EU/8188RU
-| rtl8xxxu
-| {{Package|sys-kernel/linux-firmware}}
-| May need the <var>CONFIG_RTL8XXXU_UNTESTED</var> kernel option to find all devices. Only those verified by kernel developers are enabled by default.
+| Intel Wireless-N 1000
+| {{Package|net-wireless/iwl1000-ucode}}
+|
+|-
+| Intel Ultimate-N 6300, Advanced-N 6200
+| {{Package|net-wireless/iwl6000-ucode}}
+|
+|-
+| Intel Advanced-N + WiMAX 6250, Wireless-N + WiMAX 6150 
+| {{Package|net-wireless/iwl6050-ucode}}
+|
+|-
+| Advanced-N 6205
+| {{Package|net-wireless/iwl6005-ucode}}
+|
+|-
+| Intel Advanced-N 6230, Wireless-N 1030, Wireless-N 130 
+| {{Package|net-wireless/iwl6030-ucode}}
+|
+|-
+| Intel Centrino Wireless-N 2230
+| {{Package|net-wireless/iwl2030-ucode}}
+|
+|-
+| Intel Centrino Wireless-N 100, 105, 135 and 2200
+| [http://intellinuxwireless.org/?n=Downloads iwlwifi Homepage]
+| Manual installation
 |}
-</div>
 
-<!--T:38-->
-If the driver requires firmware but does not appear on the list, it will be necessary to download it manually and place it in {{Path|/lib/firmware}}.
+If there is a package, you can simply [[emerge]] it, e.g for {{Package|iwl3945-ucode}}:
+{{Emerge|iwl3945-ucode}}
 
-== Network device names == <!--T:74-->
+If there is no package, you have to download the firmware and move it to <tt>/lib/firmware</tt> yourself.
 
-<!--T:75-->
-{{:Eudev/Network device names/en}}
+== Configuration ==
+* [[Network Connection]]
 
-== Wireless supplicant == <!--T:71-->
-
-<!--T:72-->
-If the wireless network is set up with WPA or WPA2, then a [[Wireless supplicant|wireless supplicant]] like [[wpa_supplicant]] or [[iwd]] needs to be used. For more information on configuring wireless networking in Gentoo Linux, please read the [[Handbook:AMD64/Networking/Wireless|Wireless networking chapter]] in the Gentoo Handbook.
-
-<!--T:68-->
-{{:Wifi/Testing/en}}
-
-=== dmesg === <!--T:69-->
-
-<!--T:42-->
-Check the output of {{c|dmesg}}. 
-
-<!--T:43-->
-{{Cmd|dmesg {{!}} grep -i -E 'xx:xx.x{{!}}wlan{{!}}iwl{{!}}80211'}}
-
-<!--T:76-->
-Be sure to replace
-* <code>xx:xx.x</code> with the identifier (PCIID) from [[#Hardware detection|lspci]], 
-* <code>wlan</code> with the [[#Network_device_names|network interface name]] and 
-* <code>iwl</code> with the name of the [[#Hardware detection|<code>Kernel driver in use</code>]].
-
-== Troubleshooting == <!--T:62-->
-
-<!--T:63-->
-* [https://forums.gentoo.org/viewtopic-p-7888312.html#7888312 Forum thread: wireless lan can't get ip from access point] which explains about 169.254.x.x ([[wikipedia:Link-local_address|link local address]]) being a wrong IP address
-* [https://forums.gentoo.org/viewtopic-p-7647960.html#7647960 Forum thread: iwlwifi fails to load after upgrade to 3.17.0]
-* [https://forums.gentoo.org/viewtopic-t-1016976-start-3.html Forum thread: Where is my network !?]
-
-== See also == <!--T:64-->
-
-<!--T:65-->
-* [[Handbook:AMD64/Networking/Wireless]]
-* [[AC1200 Wireless Adapters]]
-* {{See also|Iproute2}}
-* {{See also|Iwlwifi}}
-* {{See also|Qualcomm Atheros QCA6174}}
-
-== External resources == <!--T:66-->
-
-<!--T:70-->
-* [https://wiki.archlinux.org/index.php/Wireless_network_configuration Wireless network configuration] at ArchLinux
-
-</translate>
+== Advanced Configuration ==
+* [[Power Management/Wifi|Power Management]]
 
 [[Category:Network devices]]
-[[Category:Network management]]
-[[Category:Wireless]]
