--- a/USB.mw
+++ b/USB.mw
@@ -1,29 +1,48 @@
 {{InfoBox stack
-| {{InfoBox wikipedia|USB|header=true}}
-| {{InfoBox guide|USB}}
+  |{{InfoBox wikipedia|Universal Serial Bus|header=true}}
+  |{{InfoBox gdoc|usb-guide}}
 }}
-This article describes the setup of USB (Universal Serial Bus) controllers.
+This article describes the setup of ''USB'' ('''U'''niversal '''S'''erial '''B'''us) controllers.
 
 == Installation ==
 
 === Hardware detection ===
-
-To choose the right driver, first detect the used USB controllers. The {{c|[[Hardware detection|lspci]]}} utility works nicely for this task:
-
+To choose the right driver, first detect the used USB controllers. You can use [[Hardware detection#lspci|lspci]] for this task:
 {{RootCmd|lspci {{!}} grep --color -i usb}}
 
 === Kernel ===
+You need to activate the following kernel options:{{Kernel||
+Device Drivers --->
+    [*] USB support  --->
+        <*>   Support for Host-side USB
 
-See the kernel section of the [[USB/Guide#Config_options_for_the_kernel|USB guide]] and the USB host controllers section of the [[Kernel/Gentoo_Kernel_Configuration_Guide#USB_host_controllers|Kernel configuration guide]].
+{{User:Astaecker/Kernel table|level=3
+  |{{User:Astaecker/Kernel table row|xHCI HCD (USB 3.0) support|xhci-hcd|xHCI USB3 controller}}
+  |{{User:Astaecker/Kernel table row|EHCI HCD (USB 2.0) support|ehci-hcd|EHCI USB2 controller}}
+  |{{User:Astaecker/Kernel table row|OHCI HCD support|ohci-hcd|OHCI USB1 controller}}
+  |{{User:Astaecker/Kernel table row|UHCI HCD (most Intel and VIA) support|uhci-hcd|UHCI USB1 controller}}
+}}
+{{Clear}}
+}}
 
-=== Portage ===
+=== Software ===
+Portage knows the global USE flag ''usb'' for enabling support for USB in other packages:
+{{File|/etc/make.conf||
+USE{{=}}"... usb ..."
+}}
+After setting this you want to update your system so the changes take effect:
+{{RootCmd|emerge --ask --changed-use --deep world}}
 
-Portage knows the [https://packages.gentoo.org/useflags/usb <code>usb</code> USE flag]. Some packages include or exclude support for USB based on this flag. As with all [[USE flag]]s, can be set as a value of the <var>USE</var> variable in {{Path|[[:/etc/portage/make.conf#USE|/etc/portage/make.conf]]}} or in {{Path|[[:/etc/portage/package.use]]}}.
+You also want to install {{Package|sys-apps/usbutils}}, if it isn't already pulled in:
+{{Emerge|usbutils}}
+The USE flags of usbutils are:
+{{USEflag|package=sys-apps/usbutils
+|network-cron
+|python+yes
+|zlib+yes
+}}
 
-=== Emerge ===
-
-Install the {{Package|sys-apps/usbutils}} package, if it is not already installed by adding the [https://packages.gentoo.org/useflags/usb <code>usb</code> USE flag] and re-running emerge with <code>--changed-use</code>:
-
-{{Emerge|sys-apps/usbutils}}
+== Advanced Configuration ==
+* [[Power Management/Bus|Power Management]]
 
 [[Category:Interfaces]]
