Created page with "This article describes the setup of [[Bluetooth]] input devices.  == Installation ==  === Kernel === You need [[Bluetooth]] and [[evdev]] support. Also you need to activate the f..."

--- a/Bluetooth_input_devices.mw
+++ b/Bluetooth_input_devices.mw
@@ -1,16 +1,14 @@
-This article [[Article description::describes the setup of [[Bluetooth]] input devices on a Linux system.]]
+This article describes the setup of [[Bluetooth]] input devices.
 
 == Installation ==
 
 === Kernel ===
-
-Both [[Bluetooth]] and [[evdev]] support is necessary in the kernel. The following options are also required:
-
-{{KernelBox|1=
+You need [[Bluetooth]] and [[evdev]] support. Also you need to activate the following kernel options:
+{{Kernel||
 Device Drivers  --->
     [*] HID Devices  --->
 
-          You may need some special driver for your input device:
+          ''You may need some special driver for your input device:''
           Special HID drivers  --->
                 <*> ...
 
@@ -20,28 +18,14 @@ Device Drivers  --->
           <*>   HIDP protocol support
 }}
 
-=== BlueZ settings ===
-
-Change the value of <var>UserspaceHID</var> to <code>true</code> in {{Path|/etc/bluetooth/input.conf}}:
-
-{{FileBox|filename=/etc/bluetooth/input.conf|lang=ini|1=
-# Enable HID protocol handling in userspace input profile
-# Defaults to false (HIDP handled in HIDP kernel module)
-UserspaceHID=true
-}}
-
 == Configuration ==
-
 To configure the input devices use the specialized desktop management tools:
-
 * {{Package|net-wireless/gnome-bluetooth}} for [[GNOME]]
-* {{Package|kde-plasma/bluedevil}} for [[KDE]]
-* {{Package|net-wireless/blueman}} is a generic GTK+ client (i.e. for use with Openbox/i3, etc)
+* {{Package|net-wireless/bluedevil}} for [[KDE]]
 
-Some Bluetooth input devices are initially not in HID mode, but in HCI mode. This is handled by udev in {{Path|/lib/udev/rules.d/97-hid2hci.rules}}. Additional devices can be added in a custom rule file which needs to be placed in {{Path|/etc/udev/rules.d}}. Refer to the [[Udev#Rules|udev]] article for more details.
-
-== See also ==
-
-* {{See also|Bluetooth}}
+Some bluetooth input devices are initially not in the HID mode, but in HCI mode. To change this at boot time set an option in the <tt>/etc/conf.d/bluetooth</tt> file:
+{{File|/etc/conf.d/bluetooth||
+HID2HCI_ENABLE{{=}}true
+}}
 
 [[Category:Input devices]]
