Created page with "{{InfoBox stack   |{{InfoBox wikipedia|FireWire|header=true}} }} This article describes the setup of FireWire (IEEE 1394, i.Link) controllers.  == Installation ==  === Kernel ===..."

--- a/FireWire.mw
+++ b/FireWire.mw
@@ -1,21 +1,21 @@
 {{InfoBox stack
-|{{InfoBox wikipedia|IEEE 1394|header=true}}
+  |{{InfoBox wikipedia|FireWire|header=true}}
 }}
-This article [[Article description::describes the setup of FireWire (IEEE 1394, i.Link) controllers.]]
+This article describes the setup of FireWire (IEEE 1394, i.Link) controllers.
 
 == Installation ==
 
-=== Kernel configuration ===
-For FireWire support, the following kernel options need to be activated:
-{{KernelBox|title=Add FireWire driver support|1=
+=== Kernel ===
+You need to activate the following kernel options:
+{{Kernel||
 Device Drivers --->
     IEEE 1394 (FireWire) support  --->
         <*> FireWire driver stack
         <*>   OHCI-1394 controllers
-}}
 
-Select additional drivers as needed. For example, a FireWire hard drive may need the following options enabled:
-{{KernelBox|title=Add additional driver support|1=
+''Select additional drivers,''
+''e.g. for a FireWire hard drive:''
+
 Device Drivers --->
     SCSI device support --->
         <*> SCSI device support
@@ -24,21 +24,20 @@ Device Drivers --->
         <*>   Storage devices (SBP-2 protocol)
 }}
 
-=== USE flags ===
-
-Portage knows the global USE flag <code>ieee1394</code> for enabling support for FireWire in other packages. Enabling this USE flag will pull in {{Package|sys-libs/libraw1394}} automatically:
-
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-USE="... ieee1394 ..."
+=== Software ===
+Portage knows the global USE flag ''ieee1394'' for enabling support for FireWire in other packages. Enabling this USE flag will pull in {{Package|sys-libs/libraw1394}} automatically:
+{{File|/etc/make.conf||
+USE{{=}}"... ieee1394 ..."
+}}
+The USE flags of libraw1394 are:
+{{USEflag
+|static-libs
 }}
 
-{{USEflag|package=sys-libs/libraw1394}}
-
-=== Emerge ===
-After setting the USE flag above update the system so the changes take effect:
-{{Emerge|params+=--changed-use --deep|@world}}
+After setting this you want to update your system so the changes take effect:
+{{RootCmd|emerge --ask --changed-use --deep world}}
 
 == External resources ==
-* [https://ieee1394.wiki.kernel.org/ FireWire kernel wiki]
+* [http://ieee1394.wiki.kernel.org/ FireWire kernel wiki]
 
 [[Category:Interfaces]]
