--- a/PC-Card.mw
+++ b/PC-Card.mw
@@ -1,70 +1,56 @@
 {{InfoBox stack
-|{{InfoBox wikipedia|Personal Computer Memory Card International Association|header=true}}
+  |{{InfoBox wikipedia|Personal Computer Memory Card International Association|header=true}}
 }}
-
 This article describes the setup of ''PC-Card'' (also known as PCMCIA) controllers.
 
 == Installation ==
 
-=== Kernel Configuration ===
-
-The following kernel options must be activated for PCMCIA controllers:
-
-{{KernelBox|1=
+=== Kernel ===
+You need to activate the following kernel options:
+{{Kernel||
 Bus options (PCI etc.)  --->
     PCCard (PCMCIA/CardBus) support  --->
         <*>   16-bit PCMCIA support
         [*]     Load CIS updates from userspace (EXPERIMENTAL)
         [*]   32-bit CardBus support
-
-        Select a socket driver, e.g.:
-        [*]   CardBus yenta-compatible bridge support (yenta-socket)
+{{User:Astaecker/Kernel table|level=3
+  |{{User:Astaecker/Kernel table row|CardBus yenta-compatible bridge support|yenta-socket|}}
+}}
+{{Clear}}
 }}
 
-=== Portage Configuration ===
-
-Portage knows the global USE flag <code>pcmcia</code> for enabling support for PC-Cards in other packages. Enabling this USE flag will pull in {{Package|sys-apps/pcmciautils}} automatically:
-
-{{FileBox|filename=/etc/portage/make.conf|lang=bash|1=
-USE="... pcmcia ..."
+=== Software ===
+Portage knows the global USE flag ''pcmcia'' for enabling support for PC-Cards in other packages. Enabling this USE flag will pull in {{Package|sys-apps/pcmciautils}} automatically:
+{{File|/etc/make.conf||
+USE{{=}}"... pcmcia ..."
 }}
+After setting this you want to update your system so the changes take effect:
+{{RootCmd|emerge --ask --changed-use --deep world}}
 
-After setting the USE flag in the step above be sure to update the system so the changes take effect:
-
-{{Emerge|params+=--changed-use --deep|@world}}
-
-To install pcmciautils manually (if it is not already pulled in):
-
-{{USEflag|package=sys-apps/pcmciautils}}
-
+You want to install pcmciautils yourself, if it isn't already pulled in:
+{{USEflag|package=sys-apps/pcmciautils
+|debug
+|static
+|staticsocket
+}}
 {{Emerge|pcmciautils}}
 
-=== Software Configuration ===
-
 ==== Card Information Structure ====
-
-A ''PC-Card'' has a firmware called '''Card Information Structure''' (CIS). Some CISs are flawed, but can be patched at boot time. For those types of cards install {{Package|sys-apps/pcmcia-cs-cis}}:
-
+A ''PC-Card'' has a firmware called '''Card Information Structure'''. Some CISs are flawed, but you can patch them at boot time. For them install {{Package|sys-apps/pcmcia-cs-cis}}:
 {{Emerge|pcmcia-cs-cis}}
 
 ==== Resource database ====
-
-Some old 16-bit ''PCMCIA'' cards works only if a resource database is set up. This effects only some x86 and x86_64 computers; not all are effected. To find out if the database is needed look at the controllers PCI-ID. [[Hardware detection|The lspci tool]] works nicely for this task:
-
+Some old 16-bit ''PCMCIA'' cards works only, if a resource database is set up. This affects only x86 and x86_64 computers and also not all. To find out, if you need the database, have a look at your controllers PCI-ID. You can use  [[Hardware detection#lspci|lspci]] for this task, e.g.:
 {{RootCmd|lspci {{!}} egrep --color -i "pcmcia{{!}}cardbus"
 |output= '''03''':01.0 CardBus bridge: O2 Micro, Inc. Cardbus bridge (rev 21)}}
-
-If the first two numbers are not zeros (here in bold: 03), then no resource database is needed. If they are zeros, then the database will need copied to {{Path|/etc/pcmcia/config.opts}}:
-
-{{RootCmd|cd /var/db/repos/gentoo/sys-apps/pcmciautils
-|ebuild pcmciautils-017.ebuild unpack
+If the first two numbers are not zeros (here in bold: 03), then you need no resource database. If they are zeros, you need to copy the database to  <tt>/etc/pcmcia/config.opts</tt>:
+{{RootCmd|cd /usr/portage/sys-apps/pcmciautils
+|ebuid pcmciautils-017.ebuild unpack
 |cp -p /var/tmp/portage/sys-apps/pcmciautils-017/work/pcmciautils-017/config/config.opts /etc/pcmcia/
 }}
-
-Edit the file as needed.
+Edit it to your needs.
 
 == Usage ==
-
-The {{c|pccardctl}} command (part of the {{Package|sys-apps/pcmciautils}} package) can be used to show information about the PC-Card controller and the inserted cards. It can also be used to load and unload PC cards.
+You can use '''pccardctl''' (part of pcmciautils) to show informations about the PC-Card controller and the inserted cards and to load and unload cards.
 
 [[Category:Interfaces]]
