Created page with "{{DISPLAYTITLE:acpi_dock}} This article describes the setup of an [[ACPI]] based docking stations and media bays.  == Installation == You need to activate the following kernel op..."

--- a/Acpi_dock.mw
+++ b/Acpi_dock.mw
@@ -1,22 +1,16 @@
-{{DISPLAYTITLE:ACPI dock}}
-
+{{DISPLAYTITLE:acpi_dock}}
 This article describes the setup of an [[ACPI]] based docking stations and media bays.
 
 == Installation ==
-
-Activate the following kernel options for dock support:
-
-{{KernelBox|title=Enabling ACPI dock support|1=
+You need to activate the following kernel options:
+{{Kernel||
 Power management and ACPI options  --->
     [*] ACPI (Advanced Configuration and Power Interface) Support  --->
         [*] ACPI Support
             [*]   Dock
 }}
 
-{{Note|Remember to recompile the kernel and to reboot the machine when enabling build-in kernel support. Without this step the new kernel will not be loaded into memory.}}
-
 == Usage ==
-
-After the driver is loaded, for each docking station or media bay a directory {{Path|/sys/devices/platform/dock.0}}, {{Path|/sys/devices/platform/dock.1}}, etc. will be created. The files and their information can be used in scripts to adjust power management, monitors (screens), or any dock related settings.
+After the driver is loaded, for each docking station or media bay a directory <tt>/sys/devices/plattform/dock.0</tt>, <tt>.../dock.1</tt> et cetera will be created. The files and their informations can be used in scripts.
 
 [[Category:ACPI]]
