--- a/I2C.mw
+++ b/I2C.mw
@@ -1,30 +1,26 @@
-{{Confused|I2P}}
 {{InfoBox stack
-|{{InfoBox wikipedia|I²C|header=true}}
+  |{{InfoBox wikipedia|I%C2%B2C|header=true}}
 }}
-
-[[Article description::This article describes the setup of ''I<sup>2</sup>C'' ('''I'''nter-'''I'''ntegrated '''C'''ircuit) controllers.]]
+This article describes the setup of ''I<sup>2</sup>C'' ('''I'''nter-'''I'''ntegrated '''C'''ircuit) controllers.
 
 == Hardware detection ==
-
-To choose the right driver, first detect the used I<sup>2</sup>C controllers. The [[Hardware detection|lspci tool]] can be used for this task:
+To choose the right driver, first detect the used I<sup>2</sup>C controllers. You can use [[Hardware detection#lspci|lspci]] for this task:
 {{RootCmd|lspci {{!}} grep -i smbus}}
 
 == Installation ==
 
 === Kernel ===
-
-The following kernel options need to be activated:
-
-{{KernelBox|
+You need to activate the following kernel options:
+{{Kernel||
 Device Drivers  --->
-   <*> I2C support  --->
-      <*> I2C device interface
-      [*] Autoselect pertinent helper modules
-         I2C Hardware Bus support  --->
+    <*> I2C support  --->
+        <*>   I2C device interface
+        [*]   Autoselect pertinent helper modules
+              I2C Hardware Bus support  --->
 
-         Select the driver for your I2C controller, e.g.:
-            <*> Intel 82801 (ICH/PCH) (i2c-i801)
+                  ''Select the driver for your I2C controller,''
+                  ''e.g. for an Intel ICH/PCH controller:''
+                  <*> Intel 82801 (ICH/PCH)
 }}
 
 [[Category:Interfaces]]
