Created page with "This article lists and describes the setup of tools to detect hardware.  == Complete hardware list ==  === lshw === ''lshw'' generates a structured list of detected hardware and ..."

--- a/Hardware_detection.mw
+++ b/Hardware_detection.mw
@@ -1,44 +1,66 @@
-This article lists and [[Article description::describes several utilities used to detect hardware.]] See the respective article for additional details on each utility.
+This article lists and describes the setup of tools to detect hardware.
 
-__TOC__
+== Complete hardware list ==
 
-== Available software ==
+=== lshw ===
+''lshw'' generates a structured list of detected hardware and their featues. Just install {{Package|sys-apps/lshw}}:
+{{USEflag
+|gtk
+|sqlite
+|static
+}}
+{{Emerge|emerge lshw}}
 
-{| class="table sortable table-condensed table-striped"
-|-
-! Utility !! Package !! Description
-|-
-| {{c|[[BIOS_Update#Gather_firmware_information|dmidecode]]}} || {{package|sys-apps/dmidecode}} || DMI (Desktop Management Interface) table related utilities
-|-
-| {{c|[[hdparm]]}} || {{Package|sys-apps/hdparm}} || hdparm is a command line utility to set and view ATA & SATA hard disk drive hardware parameters.
-|-
-| {{c|[[hwinfo]]}} || {{Package|sys-apps/hwinfo}} || The hardware detection utility of OpenSUSE.
-|-
-| {{c|[[Hardware probe|hw-probe]]}} || [https://github.com/bobwya/bobwya/tree/master/sys-apps/hw-probe/ sys-apps/hw-probe] || — a tool to probe for hardware, check its operability and upload result to the Linux hardware DB: https://linux-hardware.org
-|-
-| {{c|[[inxi]]}} || {{Package|sys-apps/inxi}} || A system information script for [[IRC]] and system administrators.
-|-
-| {{c|[[Libinput#Invocation|libinput-list-devices]]}} || {{package|dev-libs/libinput}} || list local devices as recognized by libinput
-|-
-| {{c|[[Printing#lpinfo|lpinfo]]}} || {{Package|net-print/cups}} || Lists all printers and the used drivers (via CUPS).
-|-
-| {{c|[[lsinput]]}} || {{Package|sys-apps/input-utils}} || Small collection of linux input layer utils
-|-
-| {{c|[[lshw]]}} || {{Package|sys-apps/lshw}} || Generates a structured list of detected hardware and their features.
-|-
-| {{c|[[pciutils|lspci]]}} || {{Package|sys-apps/pciutils}} || Includes command-line tools for identifying PCI system hardware.
-|-
-| {{c|[[usbutils|lsusb]]}} || {{Package|sys-apps/usbutils}} || Includes command-line tools for identifying USB system hardware.
-|-
-| {{c|[[i2cdetect]]}} || {{Package|sys-apps/i2c-tools}} || I2C tools for bus probing, chip dumping, register-level access helpers, EEPROM decoding, and more.
-|-
-| [[Scan modem]] || Not applicable || scanModem.sh is a script used for finding suited driver for connected modems.
-|-
-|}
+=== hwinfo ===
+''hwinfo'' is the hardware detection of OpenSUSE and shows a lot details. Just install{{Package|sys-apps/hwinfo}}:
+{{Emerge|hwinfo}}
 
-== See also ==
+=== kudzu ===
+''kudzu'' is the hardware detection of Red Hat. Just install {{Package|sys-apps/kudzu}}:
+{{Emerge|kudzu}}
 
-* [[Brother_networked_printer#Use_CUPS.27_web_interface_to_install_the_printer|Use CUPS' web interface to install the printer]]
+== Specific hardware ==
+
+=== lspci ===
+''lspci'' lists all PCI devices. Just install {{Package|sys-apps/pciutils}}:
+{{USEflag|package=sys-apps/pciutils
+|compress-db
+|network-cron
+|static-libs
+|zlib+yes
+}}
+{{Emerge|pciutils}}
+lspci detects the devices based on an ID database. This database is updated online all the time, so you have to sync form time to time:
+{{RootCmd|update-pciids}}
+
+=== lsusb ===
+''lsusb'' lists all USB devices. Just install {{Package|sys-apps/usbutils}}:
+{{USEflag|package=sys-apps/pciutils
+|network-cron
+|python+yes
+|zlib+yes
+}}
+{{Emerge|usbutils}}
+lsusb detects the devices based on an ID database. This database is updated online all the time, so you have to sync form time to time:
+{{RootCmd|update-usbids}}
+
+=== lpinfo ===
+''lpinfo'' lists all printers and the used drivers. It's part of [[CUPS]].
+* '''lpinfo -v''' - lists all connected printers.
+* '''lpinfo -m''' - lists all available drivers.
+
+=== scanModem ===
+''scanModem'' finds for a connected modem a suited driver. scanModem is not in the Portage tree, so you have to download it yourself and extract it:
+{{Cmd|wget http://linmodems.technion.ac.il/packages/scanModem.gz
+|gunzip scanModem.gz
+|chmod +x scanModem
+|./scanModem}}
+It will create a folder <tt>Modem</tt> and the file <tt>scanout.something</tt> contains the wanted informations. If a modem is detected, the driver is named next to ''<code>Drivers</code>'', e.g. for aHSF modem:
+{{File|./Modem/scanout.something||
+Driver{{=}}hsfmodem-drivers
+}}
+
+== External resources ==
+* [http://hardware4linux.info/ Hardware4Linux]
 
 [[Category:Hardware]]
-[[Category:Meta]]
